testsuite/tests/grammar/invalid_transform/too_many_fields.lkt
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule stmt_rule <- list*(Def(name "=" name name))
    name <- Name(@Identifier)
}

class FooNode implements Node[FooNode] {
}

class Def : FooNode {
    @parse_field name: Name
    @parse_field value: Name
}

class Name : FooNode implements TokenNode {
}
